--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@material-ui/styles": "^4.11.4",
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.1",
+    "@stripe/react-stripe-js": "^1.7.2",
+    "@stripe/stripe-js": "^1.29.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
